--- a/landing/templates/landing/navbar.html
+++ b/landing/templates/landing/navbar.html
@@ -1,7 +1,16 @@
 <div class="container">
 <nav class="navbar navbar-expand-lg navbar-light ">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'index' %}">Zingster</a>
+
+    <a class="navbar-brand"
+    {% if user.is_authenticated%}
+    href="{% url 'post-list' %}"
+    {% else %}
+    href="{% url 'index' %}"
+    
+    {% endif %}
+    
+    ><i class="fas fa-comment"></i>Zingster</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
