--- a/social/templates/social/search.html
+++ b/social/templates/social/search.html
@@ -11,24 +11,26 @@
     </div>
     
     {% for profile in profile_list %}
-        <div class="row jutify-content:center mt-3">
-            <div class="col-md-5 col-sm-12 border-bottom position:relative">
-                <p><a style="text-decoration:none;" class="text-primary" href="{% url 'profile' profile.pk%}">@{{profile.user}}</a></p>
+        <div class="row justify-content-center mt-3">
+            <div class="col-md-5 col-sm-12 border-bottom position-relative">
+                <div>
+                    <a href="{% url 'profile' profile.pk %}">
+                        <img class="round-circle post-img" height="30" width="30" src="{{ profile.picture.url }}" />
+                    </a>
+                    <p class="post-text">
+                        <a class="text-primary post-link" href="{% url 'profile' profile.pk %}">@{{ profile.user }}</a>
+                    </p>
+                </div>
+                <p><a class="text-primary post-link" href="{% url 'profile' profile.pk %}">@{{ profile.user }}</a></p>
                 {% if profile.location %}
-                    <p> {{profile.location}}</p>              
+                    <p>{{ profile.location }}</p>
                 {% endif %}
-
-                <p> Followers: {{profile.followers.all.count }}</p> 
-
+                <p>Followers: {{ profile.followers.all.count }}</p>
             </div>
         </div>
     {% endfor %}
 
 </div>
-
-
-
-
 
 
 {% endblock content %}
