list the followers,navbar bugs resolved

--- a/landing/templates/landing/navbar.html
+++ b/landing/templates/landing/navbar.html
@@ -26,7 +26,7 @@
       <div class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" role="buton" aria-expanded="false"><i class="fas fa-user"></i></a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="{% url 'profile' user.profile.pk %}">Profile</a></li>
+          <li><a class="dropdown-item" href="{% url 'profile' request.user.profile.pk %}">Profile</a></li>
           <li><a class="dropdown-item" href="{% url 'account_logout' %}">Sign Out</a></li>
         </ul>
       </div>
