--- a/landing/templates/landing/navbar.html
+++ b/landing/templates/landing/navbar.html
@@ -16,6 +16,9 @@
     ><i class="fas fa-comment"></i> Social Network</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item active" style="font-size:20px; color:black;">
+        <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+      </li>
       </ul>
       <form class="d-flex" method="GET" action="{% url 'profile-search' %}">
         <div class="input-group">
