--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -81,6 +81,11 @@
                 </p>
             </div>
             <div class="position-relative">
+            {% if post.image %}
+
+                   <img src="{{ post.image.url }}" class="post-image"> 
+
+                {% endif %}
                 <p>{{ post.body }}</p>
                 <a href="{% url 'post-detail' post.pk %}" class="stretched-link"></a>
             </div>
