--- a/static/style.css
+++ b/static/style.css
@@ -1,27 +1,27 @@
-.remove-default-btn{
-    border: none;
-    background-color:transparent;
-    box-shadow:none;
+.remove-default-btn {
+	background-color: transparent;
+	border: none;
+	box-shadow: none;
 }
 
-.edit-color{
-    color: #333;
+.edit-color {
+	color: #333;
 }
 
-.post-link{
-    text-decoration: none;
+.post-link {
+	text-decoration: none;
 }
 
-.post-text{
-    padding-top: 0.5rem;
+.post-text {
+	padding-top: 0.5rem;
 }
 
-.post-img{
-    float: left;
-    margin-right: 1rem;
+.post-img {
+	float: left;
+	margin-right: 1rem;
 }
 
-.post-image{
+.post-image {
 	max-width: 100%;
 	height: auto;
 	border-radius: 10px;
@@ -85,4 +85,39 @@
 	color: rgb(180, 25, 25);
 	transition: 0.3s;
 	cursor: pointer;
+}
+
+.inbox-icon-container {
+	margin-right: 15px;
+}
+
+.inbox-icon {
+	color: #333;
+	transition: 0.5s;
+}
+
+.inbox-icon:hover {
+	transition: 0.5s;
+}
+
+.empty-text {
+	color: #777;
+	font-size: 1.5rem;
+	text-align: center;
+}
+
+.sent-message {
+	background-color: #f3f3f3;
+	border-radius: 30px;
+	padding: 10px 25px;
+	width: 25%;
+}
+
+.received-message {
+	background-color: rgb(1, 196, 255);
+	color: #fff;
+	border-radius: 30px;
+	padding: 10px 25px;
+	width: 25%;
+	float: right;
 }
