--- a/social/templates/social/create_thread.html
+++ b/social/templates/social/create_thread.html
@@ -18,6 +18,13 @@
 
 	<div class="row justify-content-center mt-3 mb-5">
 		<div class="col-md-5 col-sm-12">
+			{% if messages %}
+				{% for message in messages %}
+					<div class="alert alert-danger">
+						{{ message }}
+					</div>
+				{% endfor %}
+			{% endif %}
 			<form method="POST">
 				{% csrf_token %}
 				<p>Enter the username for the person you would like to talk to.</p>
